# learnopengl

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  main.cpp
src/cubes/: Makefile.am  main.cpp
src/graphics/: Cube.cpp  Cube.h  Light.cpp  Light.h  NormalCube.cpp  NormalCube.h  Rectangle.cpp  Rectangle.h  Shader.cpp  Shader.h  TexturedCube.cpp  TexturedCube.h  Triangle.cpp  Triangle.h
src/lighting/: Makefile.am  main.cpp
src/manager/: Camera.cpp  Camera.h  Input.cpp  Input.h  Window.cpp  Window.h
src/scene/: Cubes.cpp  Cubes.h  Lighting.cpp  Lighting.h  Scene.h
src/shaders/: cubes.vert.glsl  lighting.frag.glsl  lighting_cube.frag.glsl  lighting_cube.vert.glsl  rectangle.frag.glsl  rectangle.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
src/util/: Log.h
